--- a/talk/talk.mkd
+++ b/talk/talk.mkd
@@ -1,17 +1,30 @@
 # An open-source toolchain for fluorescence spectroscopy
 
-## 
+## A single molecule experiment
 
-![FRET1](fret1.pdf)
+![](fret-1.pdf)
+
+## Measuring a single molecule
+
+![](fret-2.pdf)
+
+## A simple fluorescence measurement
+
+![](fret-3.pdf)
+
+## A simple fluorescence measurement
+
+![](fret-4.pdf)
+
+## A fluorescence measurement
 
 ## Fӧrster Resonance Energy Transfer
 
-![FRET](fret_processes.pdf)
+![](fret_processes.pdf)
 
 ## Fluorescence spectroscopy
 
-![Typical fluorescence experiments](../fret-setup.pdf)
+![](../fret-setup.pdf)
 
-## 
+## Hi
 
-![f]
